<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/txtOverview"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTotalExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="56dp"
        android:text="@string/txtTotalExpenses"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRemainingBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="98dp"
        android:text="@string/txtRemainingBalance"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSavingsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="-51dp"
        android:layout_toStartOf="@+id/txtOverview"
        android:text="@string/txtSavingsAmount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTotalExpenseAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTotalExpenses"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="-2dp"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSavingsAmountAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtTotalExpenseAmt"
        android:layout_alignBottom="@+id/txtSavingsAmount"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:text="TextView"
        android:textSize="18sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="386dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="426dp"
        android:background="#2f4f4f" />

    <View
        android:id="@+id/line2"
        android:layout_width="386dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="180dp"
        android:background="#2f4f4f" />
    <TextView
        android:id="@+id/txtEnterExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:text="@string/txtEnterExpense"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRemainingBalanceAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtTotalExpenseAmt"
        android:layout_alignBottom="@+id/txtRemainingBalance"
        android:text="TextView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtAmt"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtEnterExpense"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-79dp"
        android:layout_marginTop="246dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtAmt"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtItemDesc"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtAmt"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtHintExpDesc"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerExpCategories"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="223dp"
        android:layout_marginTop="247dp"
        android:entries="@array/expCategoriesArray" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="196dp"
        android:text="@string/txtClear"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnClear"
        android:layout_alignEnd="@+id/txtOverview"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-82dp"
        android:text="@string/txtSave"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtRecentTxns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:text="@string/txtRecentTxns"
        android:textSize="28sp"
        android:textStyle="bold" />

</RelativeLayout>